chore(version): update  to display  on every page as footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,9 @@
         {% endwith %}
 
         <!-- Page-specific content goes here -->
-        {% block content %}{% endblock %}
+        {% block content %}
+        <p class="version-number">v{{ app_version }}</p>
+        {% endblock %}
     </div>
 
 </body>
