--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
                                 <span class="job-tag">REIs</span>
                                 <span class="job-qty">{{ job.rei_quantity }}</span>
                             </div>
-                            <span class="job-city">{{ job.rei_city_name or job.rei_city }}</span>
+                            <span class="job-city">{{ job.rei_city_name or job.rei_zip }}</span>
                         </div>
 
                         {% if tech_display %}
