--- a/templates/_job_fields.html
+++ b/templates/_job_fields.html
@@ -107,8 +107,8 @@
     </div>
 
     <div class="form-group">
-        <label for="rei_city">Zipcode:</label>
-        <input type="number" name="rei_city">
+        <label for="rei_zip">ZIP:</label>
+        <input type="text" id="rei_zip" maxlength="5" pattern="\d{5}">
     </div>
 </div>
 
