feat: show assigned tech on REI job badge
- Ensured job form populates technician dropdown
- Calendar/day badges append [Technician] when assigned

--- a/templates/_job_fields.html
+++ b/templates/_job_fields.html
@@ -27,11 +27,11 @@
         </div>
 
         <div class="form-group">
-            <label for="technician_id">Technician (optional):</label>
-            <select name="technician_id">
+            <label for="technician_id">Assign Technician</label>
+            <select id="technician_id" name="technician_id">
                 <option value="">-- Unassigned --</option>
-                {% for tech in technicians %}
-                <option value="{{ tech.id }}"> {{ tech.name }}</option>
+                {% for t in technicians %}
+                    <option value="{{ t.id }}"> {{ t.name }}</option>
                 {% endfor %}
             </select>
         </div>
